# EDS6397-Generative-AI-and-Applications

./: Hello.py  README.md  app.py
officeqa-financial-rag/: .gitignore  README.md
officeqa-financial-rag/docs/: final_rag_comparison.md  generator_comparison.md  json_generator_comparison.md  retriever_comparison.md  txt_json_rag_comparison.md
officeqa-financial-rag/results/: baseline_retriever_summary.csv  engineered_retriever_summary.csv  final_rag_comparison.csv  generator_comparison.csv  json_baseline_retriever_summary.csv  json_engineered_retriever_summary.csv  json_generator_comparison.csv  retriever_comparison.csv  txt_json_rag_comparison.csv
officeqa-financial-rag/scripts/: audit_answer_key.py  build_chunks.py  build_json_chunks.py  compare_retrievers.py  download_data.py  download_json_data.py  evaluate_baseline_retriever.py  evaluate_engineered_retriever.py  (+7 more)
weather-aware-personal-assistant/: .gitignore  README.md  calendar.json  pyproject.toml
weather-aware-personal-assistant/docs/: rules.md  steering-evidence.md
weather-aware-personal-assistant/specs/: PRD.md
weather-aware-personal-assistant/src/assistant/: __init__.py  __main__.py  advice_engine.py  assistant_service.py  calendar_loader.py  config.py  models.py  weather_client.py  weather_window.py
weather-aware-personal-assistant/src/assistant/cli/: __init__.py  formatter.py  repl.py
weather-aware-personal-assistant/tests/: conftest.py  test_advice_engine.py  test_assistant_service.py  test_calendar_loader.py  test_models.py  test_repl.py  test_weather_client.py  test_weather_window.py
(+7 files in other folders)
