[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-aware-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "rich",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
